# coupons

./: .gitignore  LICENSE  MANIFEST.in  README.md  admin.py  apps.py  models.py  pyproject.toml  validations.py
.github/workflows/: publish.yml
coupons/: __init__.py  apps.py  helpers.py  models.py  tests.py  validations.py
coupons/migrations/: 0001_initial.py
examples/: README.md  ajax_urls.py  ajax_views.py
migrations/: 0001_initial.py
